--- a/04. Comma/240722 이주성/html/mypage-main.html
+++ b/04. Comma/240722 이주성/html/mypage-main.html
@@ -56,21 +56,21 @@
                                     <img id="mp_heart_icon" src="../img/픽한 게시물 heart_icon.svg" alt="픽한게시물" />
                                     <a id="mp_pickboard_text" href="javascript:void(0)">픽한 게시물</a>
                                     <!-- Overlay -->
-                                    <div id="mp_pickboard_overlay"></div>
+                                    <div id= "mp_pickboard_overlay"></div>
 
                                     <!-- Popup -->
                                     <div id="mp_pickboard_popup">
-                                        <div id="mp_pickboard_popup-header">
-                                            <div id="mp_pickboard_popup-header-title">
+                                        <div class="mp_pick_popup-header">
+                                            <div class="mp_pick_popup-header-title">
                                                 <img src="../img/픽한 게시물 heart_icon.svg" alt=""><h5>픽한 게시물</h5>
                                             </div>
                                             <button id="mp_pickboard_close-popup"><img src="../img/닫기 icon.svg" alt="닫기버튼"></button>
                                         </div>
-                                        <div id="mp_popup_content">
+                                        <div class="mp_popup_content">
                                             <div class="checkbox-container">
-                                                <label id="mp_popup_content_checkbox">
+                                                <label>
                                                     <div>
-                                                        <input type="checkbox" id="select-all">
+                                                        <input type="checkbox" id="mp_pickboard_select-all">
                                                         <span>전체선택</span>
                                                     </div>
                                                     <div>
@@ -117,20 +117,112 @@
                                 </li>
                                 <li>
                                     <img id="mp_pin_icon" src="../img/픽한 장소 pin_icon.svg" alt="픽한장소" />
-                                    <a href="">픽한 장소</a>
+                                    <a id="mp_pickplace_text" href="javascript:void(0)" href="">픽한 장소</a>
+                                    <!-- Overlay -->
+                                    <div id="mp_pickplace_overlay"></div>
+                                    <!-- Popup -->
+                                    <div id="mp_pickplace_popup">
+                                        <div class="mp_pick_popup-header">
+                                            <div class="mp_pick_popup-header-title">
+                                                <img src="../img/픽한 장소 pin_icon.svg" alt=""><h5>픽한 장소</h5>
+                                            </div>
+                                            <button id="mp_pickplace_close-popup"><img src="../img/닫기 icon.svg" alt="닫기버튼"></button>
+                                        </div>
+                                        <div class="mp_popup_content">
+                                            <div class="checkbox-container">
+                                                <label class="mp_popup_content_checkbox">
+                                                    <div>
+                                                        <input type="checkbox" id="mp_pickplace_select-all">
+                                                        <span>전체선택</span>
+                                                    </div>
+                                                    <div>
+                                                        <img src="../img/delete_icon.svg" alt="삭제버튼">
+                                                    </div>
+                                                </label>
+                                            </div>
+                                            <div class="mp_pickplace-list">
+                                                <div class="mp_pickplace-item">
+                                                    <input type="checkbox" class="item-checkbox">
+                                                    <img src="../img/신라스테이_서초_img.png" alt="신라스테이_서초">
+                                                    <div class="mp_pickplace_details">
+                                                        <h3>신라스테이 서초</h3>
+                                                        <div class="mp_pickplace_rating">
+                                                            <img id="star_score_4" src="../img/별점(4점).svg" alt="별점4점">
+                                                        </div>
+                                                        <div class="mp_pickplace_grade">
+                                                            <strong>3성급 호텔</strong>
+                                                            <img id="certification_mark" src="../img/인증마크.svg" alt="인증마크">
+                                                        </div>
+                                                        <div class="mp_pickplace_price">
+                                                            <span><strong>금액 : </strong>200,000 ~ 300,000</span>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </li>
                             </ul>
                         </div>
                         <div id="mp_my_travel_grade_box">
-                            <a href=""><p>내 여행 등급</p></a>
+                            <a href=""><p id="mp_grade_text">내 여행 등급</p></a>
                             <img id="mp_baggage_icon" src="../img/내 여행 등급 baggage_icon.svg" alt="내여행등급(1단계)" />
+                            <!-- Overlay -->
+                            <div id="mp_grade_overlay"></div>
+                            <!-- Popup -->
+                            <div id="mp_grade_popup">
+                                <div class="mp_pick_popup-header">
+                                    <div class="mp_pick_popup-header-title">
+                                    </div>
+                                    <button id="mp_grade_close-popup"><img src="../img/닫기 icon.svg" alt="닫기버튼"></button>
+                                </div>
+                                <div class="mp_popup_content">
+                                    <div class="mp_grade_info_box">
+                                        <div class="mp_grade_my_info">
+                                            <h4><strong>내 여행 등급</strong></h4>
+                                            <img src="../img/보스턴백_icon.svg" alt="보스턴백img">
+                                            <p>보스턴백</p>
+                                        </div>
+                                        <div class="mp_grade_text_info">
+                                            <h6><strong>다음 단계까지 ____남았습니다.</strong></h6>
+                                            <p>여행 계획 채택 수에 따라서 등급이 나누어집니다.</p>
+                                            <p>보스턴백 : 채택수 0 ~ 500사이</p>
+                                            <p>트렁크백 : 채택수 500 ~ 2000사이</p>
+                                            <p>캐리어 : 채택수 2000 ~ 10000사이</p>
+                                            <p>비행기 : 채택수 10000이상</p>
+                                        </div>
+                                    </div>
+                                    <div class="mp_arrow">
+                                        <img src="../img/화살표_icon.svg" alt="화살표img">
+                                    </div>
+                                    <div class="mp_grade_marks">
+                                        <div>
+                                            <img src="../img/비행기_icon.svg" alt="비행기">
+                                            <p>비행기</p>
+                                        </div>
+                                        <div>
+                                            <img src="../img/캐리어_icon.svg" alt="캐리어">
+                                            <p>캐리어</p>
+                                        </div>
+                                        <div>
+                                            <img src="../img/트렁크백_icon.svg" alt="트렁크백">
+                                            <p>트렁크백</p>
+                                        </div>
+                                        <div>
+                                            <img src="../img/보스턴백_icon.svg" alt="보스턴백">
+                                            <p>보스턴백</p>
+                                        </div>
+                                    </div>                                    
+                                </div>
+                            </div>
                         </div>
                         <div id="mp_messagebox">
                             <span class="message">상태 메시지: 메시지를 클릭하여 수정하세요.</span>
                         </div>
-                        <div class="overlay" id="mp_status_overlay"></div>
-                        <!-- 오버레이 -->
-                        <div class="popup" id="mp_status_popup">
+                        <!-- Overlay -->
+                        <div id="mp_status_overlay"></div>
+                        <!-- Popup -->
+                        <div id="mp_status_popup">
                             <div>
                                 <div id="close-mp_status_popup_btn">
                                     <img id="close-mp_status_popup" src="../img/닫기 icon.svg" alt="닫기">
@@ -156,19 +248,42 @@
                             </div>
                         </div>
                         <div>
-                            <div id="add-post-button">
+                            <div id="mp_add-post-button">
                                 <img src="../img/new_board_icon.svg" alt="게시물추가"/>
+                                <!-- Overlay -->
+                                <div id="mp_new_board_overlay"></div>
+                                <!-- Popup -->
+                                <div id="mp_new_board_popup">
+                                    <div class="mp_pick_popup-header">
+                                        <div class="mp_pick_popup-header-title">
+                                            <h3>게시물 등록</h3>
+                                        </div>
+                                        <button id="mp_new_board_upload_popup"><img src="../img/업로드 icon.svg" alt="업로드_icon"></button>
+                                        <button id="mp_new_board_close-popup"><img src="../img/닫기 icon.svg" alt="닫기버튼"></button>
+                                    </div>
+                                    <div class="mp_popup_content">
+                                        <div class="mp_new_board_box">
+                                            <div>
+                                                <img src="" alt="+아이콘">
+                                                <p><strong>이미지 등록</strong></p>
+                                            </div>
+                                            <div>
+                                                <input type="text" placeholder="게시물의 내용을 입력하세요.">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                             <div id="mp_grid-container">
-                                <div class="grid-item"><img src="../img/mp_gridbox 사진1.jpg" alt="이미지 1"></div>
-                                <div class="grid-item"><img src="../img/mp_gridbox 사진2.jpg" alt="이미지 2"></div>
-                                <div class="grid-item"><img src="../img/mp_gridbox 사진3.jpg" alt="이미지 3"></div>
-                                <div class="grid-item"><img src="../img/mp_gridbox 사진4.jpg" alt="이미지 4"></div>
-                                <div class="grid-item"><img src="../img/mp_gridbox 사진5.jpg" alt="이미지 5"></div>
-                                <div class="grid-item"><img src="../img/mp_gridbox 사진6.jpg" alt="이미지 6"></div>
-                                <div class="grid-item"><img src="../img/mp_gridbox 사진7.jpg" alt="이미지 7"></div>
-                                <div class="grid-item"><img src="../img/mp_gridbox 사진8.jpg" alt="이미지 8"></div>
-                                <div class="grid-item"><img src="../img/mp_gridbox 사진9.jpg" alt="이미지 9"></div>
+                                <div class="mp_grid-item"><img src="../img/mp_gridbox 사진1.jpg" alt="이미지 1"></div>
+                                <div class="mp_grid-item"><img src="../img/mp_gridbox 사진2.jpg" alt="이미지 2"></div>
+                                <div class="mp_grid-item"><img src="../img/mp_gridbox 사진3.jpg" alt="이미지 3"></div>
+                                <div class="mp_grid-item"><img src="../img/mp_gridbox 사진4.jpg" alt="이미지 4"></div>
+                                <div class="mp_grid-item"><img src="../img/mp_gridbox 사진5.jpg" alt="이미지 5"></div>
+                                <div class="mp_grid-item"><img src="../img/mp_gridbox 사진6.jpg" alt="이미지 6"></div>
+                                <div class="mp_grid-item"><img src="../img/mp_gridbox 사진7.jpg" alt="이미지 7"></div>
+                                <div class="mp_grid-item"><img src="../img/mp_gridbox 사진8.jpg" alt="이미지 8"></div>
+                                <div class="mp_grid-item"><img src="../img/mp_gridbox 사진9.jpg" alt="이미지 9"></div>
                             </div>
                         </div>
                         <div>
